--- a/missinggenes.Rmd
+++ b/missinggenes.Rmd
@@ -9,16 +9,14 @@ output:
 ---
 
 ### Setup and data cleaning
-
 Goal: obtain a list of 1-1 syntenic orthologs that are present in hap1 and sal, but not hap2 - as well as the opposite case. Particularly interested in the sex chromosomes.
-
 ```{r message=FALSE, warning=FALSE}
 library(renv)
 library(tidyverse)
 library(vroom)
 library(GENESPACE)
 library(googlesheets4)
-setwd("~/Dropbox/rumex_pangenome_annotation")
+#setwd("~/Dropbox/rumex_pangenome_annotation")
 ```
 #### raw files
 Loading in wide format from query_pangenes() for each possible reference and bed files.
@@ -74,11 +72,7 @@ total_pangenes<-slr_rename_h1(hasanortho)
 summary_total_pangenes<-summarisebyregion(total_pangenes,n_total)
 ```
 
-#### results so far
-
-genes missing from hap2 
-#### list for blasting genes against hap2 to confirm their loss
-
+#### obtain list of y loss candidates to blast confirm
 ```{r}
 genelisth1<-hap1_yloss %>% dplyr::select(hap1)
 genelisth1_chr<-hap1_yloss %>% dplyr::select(hap1,interpChr)
@@ -87,17 +81,13 @@ genelisth1_chr<-hap1_yloss %>% dplyr::select(hap1,interpChr)
 #write.table(genelistsal, "genelistsal.txt",quote=FALSE,sep="\t")
 ```
 
-##### BLAST
-
-Run in ohta because stuff is installed there
-
+#### BLAST
+Ran this in ohta because stuff is installed there
 ```{bash eval=TRUE, error=FALSE, warning=FALSE}
-# ./blast_genome.sh
 cat blast_genome.sh
 ```
 
 #### futher analysis of blast output in R
-
 ```{r, warning=FALSE,message=FALSE}
 blastout<-read_tsv("blast_h2genome.tsv",
                     col_names = c("qseqid", "sseqid", "pident", "length", 
@@ -111,11 +101,10 @@ hits<-blastout %>% dplyr::select(qseqid) %>% distinct()
 nohit<- anti_join(genelisth1,hits, by = c("hap1"="qseqid"))
 tophit_geneonly<- blastout %>% group_by(qseqid) %>%
   mutate(the_rank  = rank(-pident, ties.method = "random")) %>%
-  filter(the_rank == 1) %>% dplyr::select(-the_rank) %>% mutate(alignedpropn = length/qlen)          
+  filter(the_rank == 1) %>% dplyr::select(-the_rank) %>% mutate(alignedpropn = length/qlen)
 ```
 
-### exclude paralogs from blast top hit list
-
+#### exclude paralogs from blast top hit list
 ```{r}
 tophit_samechr<- tophit_geneonly %>%
   left_join(genelisth1_chr,by=c("qseqid"="hap1")) %>%  
@@ -131,7 +120,7 @@ updated_genelist <- genelisth1 %>% filter(!hap1%in%tophit_notloss$qseqid)
 #write.table(updated_genelist,"genelisthap1_blast.txt",quote=FALSE,sep="\t",row.names=F)
 
 ```
-
+#### obtain list of lost genes per region
 ```{r}
 yloss_blast<- slr_rename_h1((hap1_yloss %>% filter(!hap1%in%tophit_notloss$qseqid)))
 summary_yloss_blast <-summarisebyregion(yloss_blast,n_blastconfirmedloss)
@@ -139,13 +128,11 @@ summary_yloss_blast <-summarisebyregion(yloss_blast,n_blastconfirmedloss)
 yloss_partial <- slr_rename_h1((filter(hap1_yloss,hap1%in%tophit_partial$qseqid))) 
 summary_yloss_partial <-summarisebyregion(yloss_partial,n_partialloss)
 #write.csv(yloss_partial,"yloss_partial_list.csv")
-## create complete loss file
 complete_yloss<- slr_rename_h1((hap1_yloss %>% filter(!hap1%in%tophit_notloss$qseqid))) %>% filter(!hap1%in%tophit_partial$qseqid)
 #write.csv(complete_yloss,"complete_yloss.csv")
 #sheet<-gs4_create("yloss_partial_list",sheets =yloss_partial)
 retained_on_y<-slr_rename_h1((hap1_yloss %>% filter(hap1%in%tophit_notloss$qseqid)))
 #write.csv(retained_on_y,"retained_y.csv")
-
 
 mylist<-list(summary_total_pangenes,summary_yloss_pars,
              summary_yloss_blast,summary_yloss_partial)
@@ -159,17 +146,16 @@ propnsummary<-combinedsummary %>%
   mutate(region = factor(region, levels=c("A1","A2","A4","PAR1","OldX","NewX","PAR2"))) 
 
 print(propnsummary)
-#sheet1 <- gs4_create("yloss_summary_jun23_23", sheets = propnsummary)
 
+currentdate<-Sys.Date()
+filename<-paste("yloss_summary",currentdate,sep = "")
+
+#sheet1 <- gs4_create(filename, sheets = propnsummary)
 #write_delim(propnsummary,"summary_yloss.txt")
 ```
 
-e.g. NChap1_final_00000186 has 3 hits to hap2 - one with 100% id, one with 98, one with 83. all on X
-
-## control/opposite - what about hap1 gene loss
-
-control-ish (aka is there X loss?)
-
+### control/opposite - hap1 gene loss
+is there X loss?
 ```{r}
 hap2_nonsyn<-data.table::fread("pg_hap2_wide.txt")
 nsorths2<-hap2_nonsyn %>% filter_all(any_vars(grepl("\\*",.)))
@@ -180,13 +166,7 @@ hasanortho2<-onlysyn2 %>%
    filter(((hap1!=""|hap2!="")&salicifolius!=""))
 hap2_xloss<-hasanortho2 %>% filter(hap1=="" & hap2!="" & salicifolius!="")
 
-#a_xloss<-hap2_xloss %>% group_by(interpChr) %>% summarise(n=n()) %>%
-#  filter(interpChr== "A1"|interpChr=="A2"| interpChr=="A4" #|interpChr=="Y1"|interpChr=="Y2")
-
-#b_xloss<-hasanortho %>% group_by(interpChr) %>% summarise(n=n()) %>%
-#  filter(interpChr== "A1"|interpChr=="A2"| interpChr=="A4" #|interpChr=="Y1"|interpChr=="Y2")
-
- slr_rename_h2<- function(x){mutate(x,
+slr_rename_h2<- function(x){mutate(x,
    region=if_else(chr=="Y1" & end<=64000000,"NewY1",
           if_else(chr =="Y1" & (end>64000000 & end<=272000000),"OldY1",
           if_else(chr =="Y1" & (end > 272000000 & end <= 344000000),"PAR1",
@@ -205,126 +185,91 @@ total_pangenes2<-slr_rename_h2(hasanortho2)
  
 summary_total_pangenes2<-summarisebyregion(total_pangenes2,n_total)
  
-# chrpropnPAR_xloss<-full_join(summary_total_pangenes2,summary_xloss_pars,by="region") %>% 
-#    mutate(., propn=n_xloss/n_total)  %>%
-#    mutate(region = factor(region, levels=c("A1","A2","A4","PAR1","OldY1","NewY2","OldY2","NewY1","PAR2"))) 
-# ## plot proportions 
-# print(chrpropnPAR_xloss)
-# #sheet2 <- gs4_create("xloss_summary_jun23_23", sheets = chrpropnPAR_xloss)
+chrpropnPAR_xloss<-full_join(summary_total_pangenes2,summary_xloss_pars,by="region") %>% 
+  mutate(., propn=n_xloss/n_total)  %>%
+  mutate(region = 
+    factor(region,levels=c("A1","A2","A4","PAR1","OldY1","NewY2","OldY2","NewY1","PAR2"))) 
+
+print(chrpropnPAR_xloss)
+filename2<-paste("xloss_summary",currentdate,sep = "")
+#sheet1 <- gs4_create(filename2, sheets = chrpropnPAR_xloss)
+
 #write_delim(chrpropnPAR_xloss,"summary_xloss.txt")
 ```
 
+
+### plotting y and x loss
+pie chart deprecated.
 ```{r}
-## redo b/c totals look really weird!
-slr_rename_h2<- function(x){mutate(x,
-  region=if_else(chr=="Y1" & end<=64000000,"NewY1",
-         if_else(chr =="Y1" & (end>64000000 & end<=272000000),"OldY1",
-         if_else(chr =="Y1" & (end > 272000000 & end <= 344000000),"PAR1",
-    if_else(chr=="Y2" & end<=121000000,"PAR2",
-    if_else(chr=="Y2"& (end>121000000 & end<=159000000),"NewY2",
-    if_else(chr=="Y2" & end>159000000, "OldY2",
-    if_else(chr=="A1","A1",
-    if_else(chr=="A2","A2",
-    if_else(chr=="A4","A4",NA))))))))))}
-
-pars_xloss<-slr_rename_h2(hap2_xloss)
-
-summary_xloss_pars_fix<-summarisebyregion(pars_xloss,n_xloss)
-
-total_pangenes2<-slr_rename_h2(hasanortho2)
-
-summary_total_pangenes2<-summarisebyregion(total_pangenes2,n_total)
-
-chrpropnPAR_xloss<-full_join(summary_total_pangenes2,summary_xloss_pars,by="region") %>%
-   mutate(., propn=n_xloss/n_total)  %>%
-   mutate(region = factor(region, levels=c("A1","A2","A4","PAR1","OldY1","NewY2","OldY2","NewY1","PAR2"))) 
-## plot proportions 
-print(chrpropnPAR_xloss)
-
-
-pars_yloss<-slr_rename_h1(hap1_yloss)
-summary_yloss_pars<-summarisebyregion(pars_yloss,n_yloss)
-
-
-```
-
-### plotting y loss
-
-pie chart? bar plot? lets see...
-
-```{r}
-df<-propnsummary %>% mutate(propn_notloss = 1)%>%
-   select(1,7,8,10) %>% 
-  pivot_longer(cols=2:4,values_to = "summary")
-
-ggplot(df, aes(region,summary,fill = name)) + geom_col(position="fill")
-### ick
-### --- plot of numbers genes not lost, partially lost, and completely lost --- ###
-df1<- propnsummary %>% 
-  mutate(n_notloss = n_total - n_blastconfirmedloss) %>% 
-  mutate(n_totallylost = n_blastconfirmedloss - n_partialloss) %>%
-  select(1,11,5,10) %>%
-  pivot_longer(cols=2:4, values_to = "number") 
-ggplot(df1, aes(region, number, fill=name)) + geom_col(position="stack") +
-  theme_classic() 
-#ggsave("barplot_geneloss.jpg",dpi = 300, width = 6, height = 4, units = "in")
-##"
-#install.packages("wesanderson")
-library(wesanderson)
-
-library(cowplot)
-### --- pie chart? --- ####
-df1oldX<- filter(df1, region == "OldX")
-df1newX<-filter(df1, region == "NewX")
-df1auto<-filter(df1, str_detect(region,"A.")) %>% group_by(name) %>% summarise(number=sum(number))
-dfPAR1<-filter(df1, region == "PAR1")
-dfPAR2<-filter(df1, region == "PAR2")
-
-a<-ggplot(df1auto, aes(x="", y=number, fill=name)) +
-  geom_bar(stat="identity", width=1) +
-  coord_polar("y", start=0) + theme_void()
-b<-ggplot(df1oldX, aes(x="", y=number, fill=name)) +
-  geom_bar(stat="identity", width=1) +
-  coord_polar("y", start=0) + theme_void()
-c<-ggplot(df1newX, aes(x="", y=number, fill=name)) +
-  geom_bar(stat="identity", width=1) +
-  coord_polar("y", start=0) + theme_void()
-d<-ggplot(dfPAR1, aes(x="", y=number, fill=name)) +
-  geom_bar(stat="identity", width=1) +
-  coord_polar("y", start=0) + theme_void()
-e<-ggplot(dfPAR2, aes(x="", y=number, fill=name)) +
-  geom_bar(stat="identity", width=1) +
-  coord_polar("y", start=0) + theme_void()
-```
-
-Combine legend <https://wilkelab.org/cowplot/articles/shared_legends.html>
-
-```{r}
-prow <- plot_grid(
-  a + theme(legend.position="none"),
-  b + theme(legend.position="none"),
-  c + theme(legend.position="none"),
-  d + theme(legend.position = "none"),
-  e + theme(legend.position = "none"),
-  align = 'vh',
-  labels = c("Autosomes","Old Y","New Y","PAR1","PAR2"),
-  hjust = 0,
-  label_y=0.3,
-  nrow = 1
-)
-
-
-prow
-legend <- cowplot::get_legend(a + 
-              theme(legend.box.margin = margin(0, 0, 0, 25))+
-              scale_fill_discrete(name="Paternal haplotype", 
-              labels=c("Retained genes", "Partially lost genes", "Completely lost genes")))
-
-# extract a legend that is laid out horizontally
-plot_grid(prow, legend, rel_widths = c(3, 1))
-ggsave("pie_geneloss_june23.jpg",dpi = 300, width = 10, height = 4, units = "in")
-
-
+# df<-propnsummary %>% mutate(propn_notloss = 1)%>%
+#    select(1,7,8,10) %>% 
+#   pivot_longer(cols=2:4,values_to = "summary")
+# 
+# ggplot(df, aes(region,summary,fill = name)) + geom_col(position="fill")
+# ### ick
+# ### --- plot of numbers genes not lost, partially lost, and completely lost --- ###
+# df1<- propnsummary %>% 
+#   mutate(n_notloss = n_total - n_blastconfirmedloss) %>% 
+#   mutate(n_totallylost = n_blastconfirmedloss - n_partialloss) %>%
+#   select(1,11,5,10) %>%
+#   pivot_longer(cols=2:4, values_to = "number") 
+# ggplot(df1, aes(region, number, fill=name)) + geom_col(position="stack") +
+#   theme_classic() 
+# #ggsave("barplot_geneloss.jpg",dpi = 300, width = 6, height = 4, units = "in")
+# ##"
+# 
+# 
+# library(cowplot)
+# ### --- pie chart? --- ####
+# df1oldX<- filter(df1, region == "OldX")
+# df1newX<-filter(df1, region == "NewX")
+# df1auto<-filter(df1, str_detect(region,"A.")) %>% group_by(name) %>% summarise(number=sum(number))
+# dfPAR1<-filter(df1, region == "PAR1")
+# dfPAR2<-filter(df1, region == "PAR2")
+# 
+# a<-ggplot(df1auto, aes(x="", y=number, fill=name)) +
+#   geom_bar(stat="identity", width=1) +
+#   coord_polar("y", start=0) + theme_void()
+# b<-ggplot(df1oldX, aes(x="", y=number, fill=name)) +
+#   geom_bar(stat="identity", width=1) +
+#   coord_polar("y", start=0) + theme_void()
+# c<-ggplot(df1newX, aes(x="", y=number, fill=name)) +
+#   geom_bar(stat="identity", width=1) +
+#   coord_polar("y", start=0) + theme_void()
+# d<-ggplot(dfPAR1, aes(x="", y=number, fill=name)) +
+#   geom_bar(stat="identity", width=1) +
+#   coord_polar("y", start=0) + theme_void()
+# e<-ggplot(dfPAR2, aes(x="", y=number, fill=name)) +
+#   geom_bar(stat="identity", width=1) +
+#   coord_polar("y", start=0) + theme_void()
+# ```
+# 
+# Combine legend <https://wilkelab.org/cowplot/articles/shared_legends.html>
+# 
+# ```{r}
+# prow <- plot_grid(
+#   a + theme(legend.position="none"),
+#   b + theme(legend.position="none"),
+#   c + theme(legend.position="none"),
+#   d + theme(legend.position = "none"),
+#   e + theme(legend.position = "none"),
+#   align = 'vh',
+#   labels = c("Autosomes","Old Y","New Y","PAR1","PAR2"),
+#   hjust = 0,
+#   label_y=0.3,
+#   nrow = 1
+# )
+# 
+# 
+# prow
+# legend <- cowplot::get_legend(a + 
+#               theme(legend.box.margin = margin(0, 0, 0, 25))+
+#               scale_fill_discrete(name="Paternal haplotype", 
+#               labels=c("Retained genes", "Partially lost genes", "Completely lost genes")))
+# 
+# # extract a legend that is laid out horizontally
+# plot_grid(prow, legend, rel_widths = c(3, 1))
+# ggsave("pie_geneloss_june23.jpg",dpi = 300, width = 10, height = 4, units = "in")
 ```
 
 ```{r}
@@ -336,10 +281,122 @@ testhap1<-dplyr::setdiff(total_pangenes$hap1,total_pangenes2$hap1)
 
 ```
 
-#### 
-
-Pie plots are terrible, using suggestion from Zoe for bar plots
-
+### bar plots
+Bar plot attempt 1: 
+X axis is category of gene (retained, completely lost, partially lost), colors in bars are location (old X, auto, PAR, etc)
 ```{r}
+## create data frame
+plotdata_yloss<- propnsummary %>% 
+  mutate(n_retained = n_total - n_blastconfirmedloss) %>%
+  mutate(propncompletelylost 
+         = propn_blastconfirmedloss - propn_partiallosstot) %>%
+  select(.,region,propncompletelylost,
+         propn_partiallosstot,propn_blastconfirmedloss) %>%
+  pivot_longer(cols = 2:4)
+
+plotdata_xloss <- chrpropnPAR_xloss %>% 
+  dplyr::rename(propn_xloss=propn) %>% 
+  select(.,region,propn_xloss) %>%
+  pivot_longer(cols = 2)
+
+plotdata<-dplyr::bind_rows(plotdata_yloss,plotdata_xloss)
+
+plotdata2 <-plotdata %>% 
+  mutate(region = if_else(str_detect(region,"^A."), "Autosomes",region))%>%
+  mutate(region = if_else(str_detect(region,"PAR*"), "Pseudoautosomal region",region)) %>%
+  mutate(region = if_else(str_detect(region,"New*"), "New sex-linked region",region)) %>%
+  mutate(region = if_else(str_detect(region,"Old*"), "Old sex-linked region",region)) %>%
+  mutate(.,region = factor(region, levels=c("Old sex-linked region",
+                                            "New sex-linked region","Autosomes","Pseudoautosomal region"))) 
+
+bothlossplot<-ggplot(filter(plotdata2,name == "propn_blastconfirmedloss"|
+                name =="propn_xloss"),
+       aes(x = name,y = value,fill=region)) +geom_col(position="dodge") +
+  cowplot::theme_cowplot() +
+  scale_fill_brewer(palette = "Dark2") +
+  scale_x_discrete(labels=c('Paternal haplotype\n', 'Maternal haplotype\n')) +
+  ylab("Proportion of genes lost") +
+  xlab("Comparison between haplotypes") +
+  theme(legend.position = "none") +
+  ylim(0,0.4)
+  
 
 ```
+
+```{r}
+plotdata3 <-plotdata_yloss %>% 
+  mutate(region = if_else(str_detect(region,"^A."), "Autosomes",region))%>%
+  mutate(region = if_else(str_detect(region,"PAR*"), "Pseudoautosomal region",region)) %>%
+  mutate(region = if_else(str_detect(region,"New*"), "New sex-linked region",region)) %>%
+  mutate(region = if_else(str_detect(region,"Old*"), "Old sex-linked region",region)) %>%
+  mutate(.,region = factor(region, levels=c("Old sex-linked region",
+                                            "New sex-linked region","Autosomes","Pseudoautosomal region"))) 
+
+
+ylossplot<-ggplot(filter(plotdata3,name == "propncompletelylost"|
+                name =="propn_partiallosstot"),
+       aes(x = name,y = value,fill=region)) +geom_col(position="dodge") +
+  cowplot::theme_cowplot() +
+  scale_fill_brewer(palette = "Dark2") +
+  scale_x_discrete(labels=c('partial loss\n', 'complete loss\n')) +
+  ylab("Proportion of genes lost") +
+  xlab("Partial vs. complete gene loss\n in paternal haplotype") +
+  theme(legend.position = "none") +
+  ylim(0,0.4)
+  
+
+
+#library(cowplot)
+mylegend<-cowplot::get_legend(ylossplot+theme(legend.position = 'bottom',
+                                              legend.justification="centre",legend.title=element_blank()))
+
+bottom_row <- plot_grid(mylegend)
+upper_row <- plot_grid(bothlossplot,ylossplot+theme(axis.title.y=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank(), 
+        axis.line.y=element_blank()),ncol=2,align="h",axis="tb")
+plot_grid(upper_row,
+         bottom_row, 
+        labels = c('',''), 
+        ncol = 1, rel_heights = c(5,1))
+
+
+ggsave("genelossmulti_july12.pdf",dpi = 300, width = 10, height = 4, units = "in")
+ggsave("genelossmulti_july12.jpg",dpi = 300, width = 10, height = 4, units = "in")
+
+```
+purple at top
+old sex
+proportion is kind of weird - not all adding up
+count data maybe?
+```{r}
+A<- propnsummary %>% 
+    mutate(n_completeloss 
+         = n_blastconfirmedloss - n_partialloss) %>%
+  select(.,region,n_completeloss,n_partialloss,n_blastconfirmedloss) %>%
+  pivot_longer(cols = 2:4)
+
+B <- chrpropnPAR_xloss %>% 
+  select(.,region,n_xloss) %>%
+  pivot_longer(cols = 2)
+
+plotdata<-dplyr::bind_rows(A,B)
+
+plotdata2 <-plotdata %>% 
+  mutate(region = if_else(str_detect(region,"^A."), "Autosomal",region))%>%
+  mutate(region = if_else(str_detect(region,"PAR*"), "Pseudoautosomal region",region)) %>%
+  mutate(region = if_else(str_detect(region,"New*"), "New sex-linked region",region)) %>%
+  mutate(region = if_else(str_detect(region,"Old*"), "Old sex-linked region",region))
+
+bothlossplot<-ggplot(filter(plotdata2,name == "n_blastconfirmedloss"|
+                name =="n_xloss"),
+       aes(x = name,y = value,fill=region)) +geom_col() +
+  cowplot::theme_cowplot() +
+  scale_fill_brewer(palette = "Dark2") +
+  scale_x_discrete(labels=c('paternal\n haplotype', 'maternal\n haplotype')) +
+  ylab("number of genes lost") +
+  xlab("comparison between haplotypes") #+
+  #theme(legend.position = "none")
+bothlossplot  
+```
+
