--- a/missinggenes.Rmd
+++ b/missinggenes.Rmd
@@ -11,11 +11,11 @@ output:
 ### Setup and data cleaning
 Goal: obtain a list of 1-1 syntenic orthologs that are present in hap1 and sal, but not hap2 - as well as the opposite case. Particularly interested in the sex chromosomes.
 ```{r message=FALSE, warning=FALSE}
-library(renv)
+#library(renv)
 library(tidyverse)
 library(vroom)
-library(GENESPACE)
-library(googlesheets4)
+#library(GENESPACE)
+#library(googlesheets4)
 #setwd("~/Dropbox/rumex_pangenome_annotation")
 ```
 #### raw files
@@ -44,6 +44,8 @@ Identify genes that are shared by salicifolius and hap1, but not hap2. Adding po
 ```{r}
 hasanortho<-onlysyn %>% 
   filter((hap1!=""|hap2!="")&salicifolius!="")
+
+notlost<-onlysyn %>% filter((hap1!="" & hap2!="" & salicifolius!=""))
 #write_delim(hasanortho,"denomgenelist.txt",delim="\t")
 #write_delim(hasanortho_justsal,"denomgenelist_salorth.txt",delim="\t")
 #write_csv(salorths, "denomgenelist_salorths.csv")
@@ -131,8 +133,16 @@ summary_yloss_partial <-summarisebyregion(yloss_partial,n_partialloss)
 complete_yloss<- slr_rename_h1((hap1_yloss %>% filter(!hap1%in%tophit_notloss$qseqid))) %>% filter(!hap1%in%tophit_partial$qseqid)
 #write.csv(complete_yloss,"complete_yloss.csv")
 #sheet<-gs4_create("yloss_partial_list",sheets =yloss_partial)
-retained_on_y<-slr_rename_h1((hap1_yloss %>% filter(hap1%in%tophit_notloss$qseqid)))
+
+###THIS ONE IS WRONG
+#FIX IT!!!
+#retained_on_y<-slr_rename_h1((hap1_yloss %>% filter(hap1%in%tophit_notloss$qseqid)))
 #write.csv(retained_on_y,"retained_y.csv")
+# above file is just genes that failed blast loss confirmation1!!
+# needs to be aded to other total.
+
+#retained_on_y<-slr_rename_h1((hasanortho 
+
 
 mylist<-list(summary_total_pangenes,summary_yloss_pars,
              summary_yloss_blast,summary_yloss_partial)
@@ -398,5 +408,22 @@ bothlossplot<-ggplot(filter(plotdata2,name == "n_blastconfirmedloss"|
   xlab("comparison between haplotypes") #+
   #theme(legend.position = "none")
 bothlossplot  
+## not the plot we want, using the previous one.
 ```
-###t
+### gene loss in windows on X
+What do I need?
+- list of missing genes
+- list of missing genes along X
+- list of all genes along X
+- calculation of # of genes in # gene windows that are missing
+- sliding win?
+
+
+
+
+
+
+
+
+
+
