--- a/missinggenes.Rmd
+++ b/missinggenes.Rmd
@@ -24,6 +24,7 @@ Loading in wide format from query_pangenes() for each possible reference and bed
 # excluded non representative array members and non-syntenic othogroups (see genespace script)
 hap1_raw<-data.table::fread("pg_hap1_wide_synonly.txt")
 hap2_raw<-data.table::fread("pg_hap2_wide_synonly.txt")
+sal_raw<-data.table::fread("pg_sal_wide_synonly.txt")
 hap1_nonsyn<-data.table::fread("pg_hap1_wide.txt")
 ```
 
@@ -107,7 +108,10 @@ hits<-blastout %>% dplyr::select(qseqid) %>% distinct()
 nohit<- anti_join(genelisth1,hits, by = c("hap1"="qseqid"))
 tophit_geneonly<- blastout %>% group_by(qseqid) %>%
   mutate(the_rank  = rank(-pident, ties.method = "random")) %>%
-  filter(the_rank == 1) %>% dplyr::select(-the_rank) %>% mutate(alignedpropn = length/qlen)
+  filter(the_rank == 1) %>%
+  dplyr::select(-the_rank) %>% mutate(alignedpropn = length/qlen)
+tophit_geneonly
+
 ```
 
 #### exclude paralogs from blast top hit list
@@ -161,6 +165,27 @@ propnsummary<-combinedsummary %>%
   mutate(region = factor(region, levels=c("A1","A2","A4","PAR1","OldX","NewX","PAR2"))) 
 
 print(propnsummary)
+
+papertable<-combinedsummary %>% mutate(n_completelylost = n_blastconfirmedloss-n_partialloss) %>% select(.,region,n_total,n_completelylost,n_partialloss) 
+papertable
+library(kable)
+papertable2<-propnsummary %>% mutate(propn_completelylost = propn_blastconfirmedloss-propn_partiallosstot) %>% select(.,region,n_total,propn_completelylost,propn_partiallosstot) 
+
+papertable2
+library(kableExtra)
+
+kbl(papertable2,
+    col.names = c("Region",
+                "Total genes",
+                "Completely lost genes (proportion)",
+                "Partially lost genes (proportion)"),digits = 4) %>% 
+  kable_classic(full_width = F, html_font = "Cambria") %>% 
+  column_spec(3:4, width = "10em") %>% 
+  column_spec(1,width ="5em") %>%
+  save_kable(file = "ygenelosstable.html")
+
+
+
 ```
 
 ### control/opposite - hap1 gene loss
@@ -203,6 +228,32 @@ chrpropnPAR_xloss<-full_join(summary_total_pangenes2,summary_xloss_pars,by="regi
 print(chrpropnPAR_xloss)
 ```
 
+```{r}
+papertable2<-propnsummary %>% mutate(propn_completelylost = propn_blastconfirmedloss-propn_partiallosstot) %>% select(.,region,n_total,propn_completelylost,propn_partiallosstot) 
+
+papertable2
+library(kableExtra)
+
+kbl(papertable2,
+    col.names = c("Region",
+                "Number of genes with orthologs in outgroup",
+                "Proportion of genes completely absent in paternal haplotype",
+                "Proportion of genes partially absent in paternal haplotype"),digits = 4)%>%
+  kable_classic(full_width = F, html_font = "Cambria") %>% 
+  column_spec(2:4, width = "10em") %>% 
+  column_spec(1,width ="5em") %>%
+  save_kable(file = "ygenelosstable.html")
+
+papertablex<-chrpropnPAR_xloss %>% select(region,n_total,propn)
+kbl(papertablex,
+    col.names = c("Region",
+                "Number of genes with orthologs in outgroup",
+                "Proportion of genes absent in maternal haplotype"),digits = 4) %>%
+  kable_classic(full_width = F, html_font = "Cambria") %>% 
+  column_spec(1:3, width = "10em") %>% 
+  column_spec(1,width ="5em") %>%
+  save_kable(file = "xgenelosstable.html")
+```
 
 ## plotting y and x loss
 
@@ -240,7 +291,7 @@ bothlossplot<-ggplot(filter(plotdata2,name == "propn_blastconfirmedloss"|
   cowplot::theme_cowplot() +
   scale_fill_brewer(palette = "Dark2") +
   scale_x_discrete(labels=c('Paternal haplotype\n', 'Maternal haplotype\n')) +
-  ylab("Proportion of genes lost") +
+  ylab("Proportion of\n genes lost") +
   xlab("Comparison between haplotypes") +
   theme(legend.position = "none") +
   ylim(0,0.4)
@@ -273,18 +324,18 @@ ylossplot<-ggplot(filter(plotdata3,name == "propncompletelylost"|
 
 library(cowplot)
 mylegend<-cowplot::get_legend(ylossplot+theme(legend.position = 'bottom',
-                                              legend.justification="centre",legend.title=element_blank()))
+                    legend.justification="centre",legend.title=element_blank()))
 
 bottom_row <- plot_grid(mylegend)
 upper_row <- plot_grid(bothlossplot,ylossplot+theme(axis.title.y=element_blank(),
         axis.text.y=element_blank(),
         axis.ticks.y=element_blank(), 
         axis.line.y=element_blank()),ncol=2,align="h",axis="tb")
-bothlossplot<-cowplot::plot_grid(upper_row,
-         bottom_row, 
-        labels = c('',''), 
-        ncol = 1, rel_heights = c(5,1))
-bothlossplot
+# bothlossplot<-cowplot::plot_grid(upper_row,
+#          bottom_row, 
+#         labels = c('',''), 
+#         ncol = 1, rel_heights = c(5,1))
+# bothlossplot
 #ggsave("genelossmulti_july12.pdf",dpi = 300, width = 10, height = 4, units = "in")
 #ggsave("genelossmulti_july12.jpg",dpi = 300, width = 10, height = 4, units = "in")
 ```
@@ -323,17 +374,158 @@ Distributions don't look hugely different. will continue one w the set with sal 
 mylist<-yloss_filt %>% select(hap1) %>% 
   add_column(status = "lost")
 mydf<- xtotal %>%
-    left_join(mylist, by = c('hap1')) %>% rownames_to_column() %>%
-  mutate(.,new_bin = cut(as.numeric(rowname), breaks=c(seq(0, 100, by=20))))
-## not rolling :(((((())))))
-mydf
+    left_join(mylist, by = c('hap1')) %>%
+  mutate(start_mb = start/1e6)
+```
+#### plotting gene loss along X
+```{r}
+# Assuming your DataFrame is named 'df'
+library(zoo)
+mydf<-slr_rename_h1(mydf)
+# Sort the DataFrame by the 'start' column
+#df <- df[order(df$start), ]
+
+# Create a rolling window of 20 observations with a step size of 1
+#rolling_window <- rollapply(df$status, by.column = FALSE,width = 20, FUN = function(x) sum(!is.na(x)), align = "right", fill = NA)
+```
+Rolling window functions with mutate
+```{r}
+rolling_window_fun<- function(values,win){rollapply(values,by.column=FALSE,width=win,FUN = function(x) (sum(!is.na(x))/win),
+                                                                   align="right",fill="extend")
+  }
+# Add the rolling window result as a new column in the DataFrame
+#df$sliding_window_count <- rolling_window
+
+# Display the updated DataFrame
+#print(df)
+#ggplot(data = df,aes(start,sliding_window_count)) +geom_line()
+
+
+#ggplot(data = df,aes(start,sliding_window_count)) +geom_line()
+#rolling_window <- rollapply(df$status, by.column = FALSE,width = 20, FUN = function(x) (sum(!is.na(x))/20), align = "right", fill = NA)
+#df$sliding_window_propn <- rolling_window
+
+df1<- mydf %>% 
+  arrange(start) %>%
+  group_by(region) %>%
+  mutate(roll_prop = rolling_window_fun(status,20)) %>%
+  ungroup()
+
+# ggplot(data = df,aes(start,sliding_window_propn)) +
+#   geom_line() +
+#   ylab("Proportion of genes lost on Y per window") +
+#   xlab("Position on X (Mb)") +
+#   theme_cowplot()
+# plots are same
+unique(df1$region)
+
+library(RColorBrewer)
+mypal<-brewer.pal(4,"Dark2")[c(2,1,4,4)] # needs to match prev plot
+
+xplot<-ggplot(data = df1,aes(start_mb,roll_prop)) +
+  geom_line(aes(color = region)) +
+  ylab("Proportion of genes\n lost on Y per window") +
+  xlab("Position on X (Mb)") +
+  theme_cowplot() +
+  scale_color_manual(values = mypal) +
+  theme(legend.position = "none")
+xplot 
+
+#View(filter(df1,start <270000000 & start >260409843))
+## to do: add to previous geneloss plot
+```
+
+#### create complete figure of X gene loss
+```{r}
+plot_grid(bothlossplot,xplot,ncol=1)
+
+plot_grid(upper_row,
+         bottom_row, xplot,
+        labels = c('A','','B'), 
+        ncol = 1, rel_heights = c(6,1,6))
+#ggsave("multipaneltest.pdf",height =8, width = 10)
+```
+
+#### geneloss along positions relative to salicifolius
+Adding positions and chromosome info for salicifolius
+```{r}
+salkey<-readr::read_delim("input_to_output.txt",col_names =c("old","new"),show_col_types = FALSE)
+salkey<-salkey %>% mutate(fix=str_replace(old, "\\=", "\\_")) %>%
+  mutate(.,fix=str_replace(fix, "\\;", "\\_")) %>% select(fix,new)
+salkey<-as.data.frame(salkey)
+
+salclean<-sal_raw %>% filter(genome == "salicifolius") %>%select(repGene,chr,start,end) %>% 
+  rename(salicifolius =repGene,salchr = chr, salstart=start, salend=end) %>% 
+  dplyr::mutate(salChr = case_when(salchr == salkey[1,1] ~ salkey[1,2], 
+                        salchr == salkey[2,1] ~ salkey[2,2], 
+                        salchr == salkey[3,1] ~ salkey[3,2],
+                        salchr == salkey[4,1] ~ salkey[4,2],
+                        salchr == salkey[5,1] ~ salkey[5,2],
+                        salchr == salkey[6,1] ~ salkey[6,2],
+                        salchr == salkey[7,1] ~ salkey[7,2],
+                        salchr == salkey[8,1] ~ salkey[8,2],
+                        salchr == salkey[9,1] ~ salkey[9,2],
+                        salchr == salkey[10,1] ~ salkey[10,2])) 
+head(salclean)
+df2<-left_join(df1,salclean)%>% drop_na(.,salChr) %>% select(.,-roll_prop) %>% mutate(salstart_mb=salstart/1e6)
+#df2
+#df2 <- df2[order(df2$salstart), ]
+#df2
+#rolling_window <- rollapply(df2$status, by.column = FALSE,width = 20, FUN = function(x) (sum(!is.na(x))/20), align = "right", fill = NA)
+```
+
+```{r}
+df3<-df2 %>%
+  group_by(salchr) %>% 
+  arrange(salstart_mb,.by_group=TRUE) %>%
+  mutate(roll_prop = rolling_window_fun(status,20)) 
 
 
 ```
 
+```{r}
 
+#rolling_window_fun(df2,20)
+#rolling_window
+#df2$sliding_window_propn <- rolling_window
+head(df3)
+## scaffold_6 has all NAs - face_wrap leaves it in, need to filter out.
+salplot<-ggplot(data = filter(df3,salChr!="Scaffold_6"),aes(salstart_mb,roll_prop)) +
+  geom_line() +
+  geom_line(aes(color = region)) +
+  ylab("Proportion of genes\n lost on Y per window") +
+  xlab("Position relative to R. salicifolius gene order (Mb)") +
+  theme_cowplot() + 
+  scale_color_manual(values = mypal) +
+   theme(legend.position = "none")+
+  facet_wrap(~salChr,drop = TRUE)
+salplot  
+ggsave("sal_position_geneloss.pdf",height = 6, width = 8)
+```
 
+```{r}
 
+ggplot(data = filter(df3,salChr == "Scaffold_7"),aes(salstart,roll_prop)) +
+  geom_line() +
+  facet_wrap(~salChr) +
+  ylab("Proportion of genes lost on Y per window") +
+  xlab("Position relative to R. salicifolius gene order (Mb)") +
+  theme_cowplot()
+ggsave("sal_scaf7_ygeneloss.pdf",height = 6, width = 8)
+
+filter(df3,salchr == "scaffold_7")
+
+# plot all
+
+```
+Plot everything
+```{r}
+plot_grid(upper_row,
+         bottom_row, xplot,salplot,
+        labels = c('A','','B','C'), 
+        ncol = 1, rel_heights = c(9,1,9,12))
+ggsave("multipanel_geneloss_sept12.pdf",height =10, width = 12)
+```
 
 
 
